Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63764

QHostAddress::setAddress(SpecialAddress) does not detach shared data object

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.9.3
    • 5.8.0, 5.9.0, 5.9.2, 5.10.0 Beta 1
    • Network
    • None
    • 7809bba68f65ad9e95691d52e6584314d4909bd0

    Description

      The optimized version of setAddress introduced in Qt 5.8 does not detach the shared data, so it may destroy a referenced object.

       

      QHostAddress copy = m_address;
      copy = QHostAddress::AnyIPv4;

      copy and m_address are set to QHostAddress::AnyIPv4 now.

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tpochep Timur Pocheptsov
            zerocom Stefan Sommerfeld
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes